# Book1_Python-For-Beginners

./: main.py  pyproject.toml
Book1_Ch02_Python_Codes/: Bk1_Ch2_01.ipynb
Book1_Ch04_Python_Codes/: Bk1_Ch04_01.ipynb
Book1_Ch10_Python_Codes/: Bk1_Ch10_01.ipynb  Bk1_Ch10_02.ipynb  Bk1_Ch10_03.ipynb
Book1_Ch13_Python_Codes/: Bk1_Ch13_01.ipynb
Book1_Ch15_Python_Codes/: vector_ multiply.ipynb  vector_add.ipynb  vector_view.ipynb
